--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,4 +8,5 @@ body {
 section {
   padding: 60px 20px;
   text-align: center;
+  box-sizing: border-box;
 }
